Big reshuffle, new pulse sequenceing method. Note. Attempting programming drunk. See next commit.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,6 @@ board = teensy31
 build_flags = -Ofast -g -fverbose-asm
 framework = arduino
 board_f_cpu = 120000000L
-
+board_f_bus = 48000000L
 
 #[env:pre_and_post_hooks]
