--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,9 @@
 extra_scripts = Decompile.py
 platform = teensy
 board = teensy31
-build_flags = -Ofast -g -fverbose-asm
+build_flags = -O2 -g -fverbose-asm
 framework = arduino
 board_f_cpu = 120000000L
-board_f_bus = 48000000L
+
 
 #[env:pre_and_post_hooks]
