Moving Over to PIT acting as PLL for locking to main carrier wave, and secondary carrier wave for better noise isolation and to reduce number of pulses lost due to a partial sync loss. AKA, a reasonable guess can still be made.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 extra_scripts = Decompile.py
 platform = teensy
 board = teensy31
-build_flags = -O2 -g -fverbose-asm
+build_flags = -Ofast -g -fverbose-asm
 framework = arduino
 board_f_cpu = 120000000L
 
